syntax = "proto3";

package aggregator;
option go_package = "github.com/Costin2000/GoChat---Schwarz-Internship---2025/services/aggregator/proto;proto";

import "services/user-base/proto/userbase.proto";

service AggregatorService {
  rpc FetchUserFriends(FetchUserFriendsRequest) returns (FetchUserFriendsResponse);
}

message FetchUserFriendsRequest {
  string user_id = 1;
  bool show_friends = 2;
}

message FetchUserFriendsResponse {
  repeated user_base.User users = 1;
}